News UAT/force-app/main/default/objects/DNC_Wash_Register__c/DNC_Wash_Register__c.object-meta.xml
<CustomObject>
    <description>This object contains the list of phone numbers to be washed against the ACMA Do Not Call Register. The outcomes of the wash process are also recorded in this object.</description>
    <label>DNC Wash Register</label>
    <nameField>
        <displayFormat>WR-{0}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DNC Wash Register</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>