News UAT/force-app/main/default/objects/DNC_Wash_Register__c/fields/DNC_Status__c.field-meta.xml
<CustomField>
    <fullName>DNC_Status__c</fullName>
    <description>This field stores the outcome of the check of the phone number against the ACMA &#39;Do Not Call&#39; register.

Y - Yes it is in the Register - DO NOT CALL
N - Not in the register, can be contacted
I - Invalid data format on ACMA upload</description>
    <inlineHelpText>This field stores the outcome of the check of the phone number against the ACMA &#39;Do Not Call&#39; register.

Y - Yes it is in the Register - DO NOT CALL
N - Not in the register, can be contacted
I - Invalid data format on ACMA upload</inlineHelpText>
    <label>DNC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>