News UAT/force-app/main/default/objects/DNC_Wash_Register__c/fields/From_Campaign_At__c.field-meta.xml
<CustomField>
    <fullName>From_Campaign_At__c</fullName>
    <description>Used for the Manual (Campaign-specific) Wash.

This is timestamp field used to distinguish extract process is from specific campaign rather than from the Monthly (Batch) DNC Register update.</description>
    <inlineHelpText>Used for the Manual (Campaign-specific) Wash.</inlineHelpText>
    <label>From Campaign At</label>
    <type>DateTime</type>
</CustomField>