News UAT/force-app/main/default/objects/DNC_Wash_Register__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The Phone number that is eligible for washing (or has been washed) against the Do Not Call Register. This is set as a text field as it also needs to be a unique external Id.</description>
    <externalId>true</externalId>
    <label>Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>