News UAT/force-app/main/default/objects/DNC_Wash_Register__c/fields/Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date__c</fullName>
    <description>Date in which this phone number was last deemed to be in an active campaign and thus requiring a DNC status.

Essentially it is the timestamp for when a Batch or Manual Wash pushed this phone number into the DNC Wash Register.</description>
    <inlineHelpText>Date in which this phone number was last deemed to be in an active campaign and thus requiring a DNC status.</inlineHelpText>
    <label>Qualification Date</label>
    <type>DateTime</type>
</CustomField>