News UAT/force-app/main/default/objects/DNC_Wash_Register__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>This field stores the date in which the DNC status date was updated</description>
    <inlineHelpText>This field stores the date in which the DNC status date was updated</inlineHelpText>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>