News UAT/force-app/main/default/objects/DNC_Wash_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>DNC_Status__c</columns>
    <columns>Phone_Number_In_DNC__c</columns>
    <columns>Status_Date__c</columns>
    <columns>Qualification_Date__c</columns>
    <columns>From_Campaign_At__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>All</label>
</ListView>